feat(workflow): created a workflow for step 3 v3

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,5 +37,5 @@ jobs:
       - name: Upload Firefox Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: chromeArtifact
+          name: firefoxArtifact
           path: ./.output/firefox-mv2
