--- a/.github/workflows/deploy-firefox.yaml
+++ b/.github/workflows/deploy-firefox.yaml
@@ -1,8 +1,6 @@
 name: Generate and deploy the firefox extension
 on:
   push:
-    branches:
-      - main
     tags:
       - "*"
 
@@ -35,10 +33,4 @@ jobs:
         run: npm run build:firefox
 
       - name: Sign with web-ext for firefox
-        run: |
-          web-ext sign \
-            --api-key ${{ secrets.AMO_JWT_ISSUER }} \
-            --api-secret ${{ secrets.AMO_JWT_SECRET }} \
-            --channel unlisted \
-            --source-dir ./output/firefox-mv2 \
-            -- artifacts-dir ./signed
+        run: web-ext sign --api-key ${{ secrets.AMO_JWT_ISSUER }} --api-secret ${{ secrets.AMO_JWT_SECRET }} --channel unlisted --source-dir ./output/firefox-mv2 --artifacts-dir ./signed
