feat(step 4): created a workflow to deploy the firefox extension v6

--- a/.github/workflows/deploy-firefox.yaml
+++ b/.github/workflows/deploy-firefox.yaml
@@ -30,6 +30,7 @@ jobs:
         run: npm run lint:check
 
       - name: Generate Firefox Build
+        id: build
         run: npm run build:firefox
 
       - name: Sign with web-ext for firefox
