feat(step 4): created a workflow to deploy the firefox extension v7

--- a/.github/workflows/deploy-firefox.yaml
+++ b/.github/workflows/deploy-firefox.yaml
@@ -35,4 +35,4 @@ jobs:
 
       - name: Sign with web-ext for firefox
         if: steps.build.outcome == 'success'
-        run: web-ext sign --api-key ${{ secrets.AMO_JWT_ISSUER }} --api-secret ${{ secrets.AMO_JWT_SECRET }} --channel unlisted --source-dir ./output/firefox-mv2 --artifacts-dir ./signed
+        run: web-ext sign --api-key ${{ secrets.AMO_JWT_ISSUER }} --api-secret ${{ secrets.AMO_JWT_SECRET }} --channel unlisted --source-dir ./.output/firefox-mv2 --artifacts-dir ./signed
